Release v1.2.0: Folia Support, Nuke Queue, Modrinth Auto-Updater, Ground-Based Sync